--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="size">Size</string>
     <string name="battery">Battery</string>
     <string name="seller">Dijual oleh</string>
-    <string name="my_name">Narenda Wicaksono</string>
+    <string name="my_name">Diah Salsabila</string>
     <string name="buy">Buy</string>
     <string name="dummy_value">$735</string>
     <string name="dummy_photos">6 photos</string>
